fix(vacanciespage): add card list scrollbar new height

--- a/src/components/VacanciesPage/VacanciesPage.scss
+++ b/src/components/VacanciesPage/VacanciesPage.scss
@@ -17,7 +17,7 @@
 
   &__scroll-wrap {
     position: absolute;
-    top: -12px;
+    top: -34px;
     right: -22px;
     left: -12px;
     bottom: -12px;
@@ -41,7 +41,7 @@
   }
 
   &__content {
-    margin-top: 12px;
+    margin-top: 34px;
     margin-left: 12px;
     margin-bottom: 12px;
     position: relative;
